# unitree_sdk2_mlx

./: .gitignore  README.md  pyproject.toml
examples/: read_udp.py
src/unitree_sdk2_mlx/: __init__.py  crc.py  parser.py  protocol.py  reader.py  transforms.py  transforms_mlx.py  types.py
src/unitree_sdk2_mlx/transport/: __init__.py  base.py  serial.py  udp.py
tests/: conftest.py  test_crc.py  test_from_bytes.py  test_parser.py  test_protocol.py  test_reader_integration.py  test_transforms.py
