[project]
name = "unitree-sdk2-mlx"
version = "0.1.0"
description = "Python/MLX port of Unitree L2 LiDAR SDK for macOS Apple Silicon"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "pyserial>=3.5",
]

[project.optional-dependencies]
mlx = ["mlx>=0.17.0"]
viz = ["open3d>=0.18.0", "matplotlib>=3.8.0"]
dev = ["pytest>=8.0", "ruff>=0.4.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/unitree_sdk2_mlx"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100
